[18.December 2008]
- DefaultCampaign, RubyCampaign: fixed requirement statements of moved entities

[15.December 2008]
- gfx/runes_[large, small].png: runes for rune stones and rune gems
- entities from top directory moved to 'entities' (with exception of vikings,
  sword and shield);
  also entities from directory 'monsters' moved there
- gfx/runestone.png: awful, but I can't make it better for now
- game.rb, some entities: fixed require statements (requiring from 'monsters')
- fvdef.rb, freevikings.rb: 'entities/' added to $:, 'monsters/' removed
- entities/runestone.rb: three classes of different runic stones
- entities/door.rb: @rect.w changes according to state of the object
- gfx/themes/UndergroundCave (new theme, now has just a bridge)
- entities/bridge.rb: added comment about initialisation
- entities/fallingstone.rb: New funny game object which likes to kill vikings
- level HolyHole: nearly ready (needs just apexes and some monsters)
- ... (most probably I forgot a lot of things...)

[13.December 2008]
- started work on gfx/runestone.png

[12.December 2008]
- viking.rb, monstermixins.rb:
  'a.XX_on_rect(r).each {}' replaced by 'a.XX_on_rect(r) {}' (less iterations -
  new feature of SchwerEngine::Group)
- utils/tiletester.rb: repaired
- viking.rb, vikingstate.rb, LDDR level: solved two ladder issues: 
  viking doesn't "pop" on the top of ladder if the area over ladder isn't free;
  he also falls when he reaches bottom of a ladder
- new tilesets and new campaign 'Christmas 2008'

[11.December 2008]
- trying to solve problem with exitting from Ladder testing level I looked 
  at code of class Exit, added width and height (so that exit area is not
  just the top-left corner, but whole area of the image) and rewrote method 
  Exit#team_exited?, which was awfully uneffective
- added climbing states to models of Olaf and Baleog (although I haven't
  painted special images for them because graphics of vikings should
  be replaced as soon as possible)  