@@ -19,8 +19,6 @@
 
 (-) Olaf's shield disappears when climbing
 
-(-) [FIX] fix DefaultCampaign - where requires from 'monsters/'
-
 (-) [BUG] Repair bottompanel - it should show life loss immediatelly
 
 (-) Christmas bonus level(set?)
