@@ -1,6 +1,6 @@
 # guardrobot_script.rb
 # igneus 1.8.2006
 
-require 'monsters/guardrobot'
+require 'guardrobot'
 
 LOCATION << GuardRobot.new([9*40, 11*40 - GuardRobot::HEIGHT])
